# serverless-flask-template

./: .gitignore  README.md  pyproject.toml  serverless.yml
serverless-flask-template/: api.py
serverless_flask_template/: api.py
tests/: test_serverless_flask_template.py
